ALL DONE NOW WITH THE ERRORS BEEN CAUGHT
